# deep-learning

./: pyproject.toml
0_pytorch_basics/: notes.md
0_pytorch_basics/pytorch-tutorial/: 1_intro.ipynb  2_tensors.ipynb  3_autograd.ipynb  4_building_models.ipynb  6_training.ipynb
1_word2vec/: notes.md  pyproject.toml
1_word2vec/cs224n-a1/: exploring_word_vectors.ipynb
1_word2vec/cs224n-assignment/: exploring_word_vectors.ipynb
1_word2vec/training-word2vec/: README.md
2_more_basics/: notes.md
