[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Aman Dhesi <amandhesi2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
jupyter = "^1.1.1"
matplotlib = "^3.10.5"
ipykernel = "^6.30.1"
scikit-learn = "^1.7.1"
gensim = "^4.3.3"
datasets = "^4.0.0"
torch = "^2.9.0"
torchvision = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
